# Base32H

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: my_benchmark.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decode_string.rs  decode_string_to_binary.rs  encode_binary_to_string.rs  encode_to_string.rs
src/: lib.rs
