[package]
name = "base32h"
version = "0.2.0"
authors = ["Jonathan Donaldson <jdonaldson278@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Base32H for rust"
repository = "https://github.com/jdon/Base32H/"
readme = "README.md"
documentation = "https://docs.rs/base32h"
exclude = ["fuzz", ".github",]

[dependencies]
phf = { version = "0.8", features = ["macros"] }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false
